добавил в форму тег <fieldset>

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 </head>
 
 <body>
+  <!-- ANCHOR -Header -->
   <header id="Header" class="header">
     <nav class="header__menu">
       <ul class="menu__items">
@@ -31,6 +32,7 @@
     </nav>
   </header>
   <main>
+    <!-- ANCHOR -Intro -->
     <section id="Intro" class="intro section">
       <div class="intro__hero">
         <h1 class="hero__title">Cергей Ярков</h1>
@@ -44,6 +46,7 @@
         <img class="video__icon" src="img/icons/ico-youtube.svg" alt="youtube-icon">
       </div>
     </section>
+    <!-- ANCHOR -Like -->
     <section id="Like" class="like section">
       <div class="like__left">
         <h2 class="section__title">Мне нравится</h2>
@@ -95,6 +98,7 @@
         </div>
       </div>
     </section>
+    <!-- ANCHOR -Feature -->
     <section id="Feature" class="feature section">
       <h2 class="section__title">feature products</h2>
       <p class="section__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor
@@ -119,6 +123,7 @@
         <li class="feature__img"><img src="img/feature-block/feature-08.jpg" alt="foto"></li>
       </ul>
     </section>
+    <!-- ANCHOR -Meet -->
     <section id="Meet" class="meet section">
       <h2 class="section__title">Meet our team</h2>
       <p class="section__subtitle">Lorem ipsum dolor sit amet, consectetur adipis cing elit,sed do eiusmod tempor
@@ -152,18 +157,20 @@
         </div>
       </div>
     </section>
+    <!-- ANCHOR -Form -->
     <section id="Form" class="form section section--wide">
       <p class="form__title">
-        Design tips, tricks, and freebies. Delivered weekly.
+        Далеко-далеко за словесными горами в стране..
       </p>
       <p class="form__subtitle">
-        Lorem ipsum dolor sit amet, consectetur adipis cing elit, sed do eiusmod.
+        Далеко-далеко, за словесными горами в стране гласных и согласных живут рыбные тексты. Дал переулка ты, путь своего точках деревни себя.
       </p>
       <form action="" id="form__form" method="GET">
-        <input type="email" name=" email" placeholder="Email Address..." required>
+        <input id="email" type="email" name=" email" placeholder="Email Address..." required>
         <button class="form__form" type="submit">subscribe</button>
       </form>
     </section>
+    <!-- ANCHOR -Contact -->
     <section id="Contact" class="contact section--wide-wide">
       <div class="section__head">
         <h2 class="section__title">get in touch</h2>
@@ -176,10 +183,10 @@
       <div class="contact__body">
         <div class="contact__left-decor decor"></div>
         <form action="" method="GET" class="contact__form" id="Mess" name="Message">
-          <div class="form__input">
+          <fieldset class="form__input">
             <input name="Имя" type="text" placeholder="Name" required>
             <input name="Mail" type="email" placeholder="Your Mail" required>
-          </div>
+          </fieldset>
           <textarea name="message" id="" cols="30" rows="10" placeholder="Type your message" required></textarea>
           <button class="contact__btn" type="submit">Send message</button>
         </form>
@@ -196,6 +203,7 @@
       </div>
     </section>
   </main>
+  <!-- ANCHOR -Footer -->
   <footer id="Footer" class="footer section--wide">
     <p class="footer__copyright">
       © Copyright @Junaed 2016, All rights reserved.
